Fix logo alignment and remove workspaces module

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -139,6 +139,9 @@ tooltip label {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+#custom-logo{
+  margin-right: 6px;
+}
 #backlight,
 #memory,
 #clock,
